kubernetes/system/tapy/overlays/cloud/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tapy
  labels:
    access.rabbitmq.io/enabled: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
