kubernetes/system/tapy/overlays/cloud/common/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-controller-to-tapy-frontend
spec:
  podSelector:
    matchLabels: {app: tapy, component: frontend}
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels: {networking.tapy.io/ingress: "true"}
          podSelector:
            matchLabels: {networking.tapy.io/controller: "true"}
      ports: [{port: 3000, protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tapy-public-egress
spec:
  endpointSelector:
    matchLabels: {app: tapy, component: api}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports: [{port: "53", protocol: ANY}]
          rules:
            dns: [{matchPattern: "*"}]
    - toFQDNs:
        - {matchName: accounts.google.com}
        - {matchName: oauth2.googleapis.com}
        - {matchName: gmail.googleapis.com}
        - {matchName: login.microsoftonline.com}
        - {matchName: graph.microsoft.com}
      toPorts:
        - ports: [{port: "443", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tapy-health-probes
spec:
  endpointSelector:
    matchLabels: {app: tapy, component: api}
  ingress:
    - fromEntities: [host, remote-node]
      toPorts:
        - ports: [{port: "8080", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tapy-frontend-external-egress
spec:
  endpointSelector:
    matchLabels: {app: tapy, component: frontend}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports: [{port: "53", protocol: ANY}]
          rules:
            dns: [{matchPattern: "*"}]
    - toFQDNs:
        - {matchName: api.twilio.com}
        - {matchName: generativelanguage.googleapis.com}
      toPorts:
        - ports: [{port: "443", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tapy-frontend-health-probes
spec:
  endpointSelector:
    matchLabels: {app: tapy, component: frontend}
  ingress:
    - fromEntities: [host, remote-node]
      toPorts:
        - ports: [{port: "3000", protocol: TCP}]
